--- a/contents/css/styles.css
+++ b/contents/css/styles.css
@@ -46,7 +46,7 @@ body {
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
   color: var(--text-color);
-  overflow-x: hidden;
+  overflow-x: hidden !important;
   overflow-y: hidden;
 }
 
@@ -131,11 +131,17 @@ img {
 .nav__data {
   position: relative;
   margin-bottom: 3rem;
-  margin-top: -4rem;
+  margin-top: -8rem;
 }
-
+.carousel-caption p{
+  text-align: center;
+  margin-left: -10px;
+}
 #home .carousel{  
   margin-top: -32px; 
+}
+.displayFlex h3{
+  text-align: left;
 }
 .carousel-item img{
   height: 89vh;
@@ -483,8 +489,9 @@ img {
 }
 .bgShadow{
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-image: url(../img/backgroundAbout.jpg);
+  background-repeat: repeat;
   background-size: 100%;
   box-shadow:  0 0 40px 3px #111;
 }
@@ -501,8 +508,8 @@ img {
   top: 70px;
 }
 .AboutUs{
-  width: 1000px;
-  margin-top: 180px;
+  width: 800px;
+  margin-top: 80px;
 }
 .AboutUs h3{
   color: #fff;
@@ -621,7 +628,6 @@ textarea {
 
 .send-button {
   margin-top: 15px;
-  margin-left: 14px;
   height: 34px;
   width: 400px;
   overflow: hidden;
@@ -840,6 +846,7 @@ hr {
   color: rgb(255, 255, 255);
   background-color: #000 ;
   border-color: #000;
+  margin-left: 15.5px;
 }
 .btn-primary:hover {
   color: #fff;
