--- a/contents/css/media.css
+++ b/contents/css/media.css
@@ -152,6 +152,9 @@
     .nav__link {
         font-size: 20px;
     }
+    .footerOne h1,p{
+        margin-left: 50px !important;
+    }
 }
 @media (min-width: 400px) and (max-width: 499px){
     .boxOne {
