--- a/contents/css/media.css
+++ b/contents/css/media.css
@@ -21,10 +21,11 @@
     }
     .AboutUs{
         width: 300px !important;
-        margin-top: 80px;
-        margin-left: 20px;
+        margin-top: 120px;
+        padding-top: 50px;
+        margin-left: 30px;
     }
-    .AboutUs h1, h3, p{
+    .AboutUs h1, .AboutUs h3, .AboutUs p{
         width: 260px !important;
         margin-top: 20px;
         margin-left: 0 !important;
@@ -57,7 +58,7 @@
         margin: 0 !important;
     }
     .AboutUs button{
-        margin-left: 25%;
+        margin-left: 17%;
         margin-bottom: 50px;
     }
     .AboutUs h1{ 
@@ -73,7 +74,7 @@
         margin: 50px 0 50px 0;
     }
     .container{
-        width: 100% !important;
+        width: 95% !important;
     }
     .container .card .image{
         left: 0 !important;
@@ -85,7 +86,7 @@
         font-size: 20px !important;
     }
     #About {
-        margin-top: 2000px !important;
+        margin-top: 2100px !important;
         margin-bottom: 500px;
     }
     #contack{
@@ -142,7 +143,7 @@
         margin: 20px 0 20px 0 !important;
     }
     .form-control{
-        width: 300px !important;
+        width: 250px !important;
     }
     .nav__greeting{
         font-size: 30px !important;
@@ -160,8 +161,8 @@
     .nav__link {
         font-size: 20px;
     }
-    .footerOne h1,p{
-        margin-left: 30px !important;
+    .footerOne h1, .footerOne p{
+        margin-left: 0% !important;
     }
     .btn-primary{
         margin-left: 0 !important;
