--- a/contents/css/media.css
+++ b/contents/css/media.css
@@ -4,7 +4,7 @@
         top: 0 !important;
     }
     #contact{
-        margin-top: 160px;
+        margin-top: 250px;
     }
     .boxOne ul{
         width: 100% !important;
@@ -44,7 +44,7 @@
     }
     .AboutIcon{
         width: 40px !important;
-        margin: 20px 0 0 0  !important;
+        margin: 40px 0 0 0  !important;
     }
     .bgShadow{
         height: 220% !important;
@@ -176,6 +176,13 @@
         width: 200px !important;
         margin: 0 !important;
     }
+    .bottomShadow{
+        margin-top: 13.9% !important;
+        z-index: 10;
+    }
+    .boxOne{
+        justify-content: center !important;
+    }
 }
 @media (min-width: 400px) and (max-width: 499px){
     .boxOne {
@@ -189,18 +196,20 @@
         width: 100% !important;
     }
     .boxOne ul li{
-        width: 35%;
+        width: 38%;
     }
     .boxOne li p{
-        width: 120px !important;
+        /* width: 120px !important; */
         font-size: 13px !important;
+        margin: 0 !important;
+        margin-left: 7px !important;
+        padding: 10px 10px 40px 10px !important;
     }
     .AboutUs{
         width: 300px !important;
         margin-top: 80px;
-        margin-left: 20px;
     }
-    .AboutUs h1, h3, p{
+    .AboutUs h1, .AboutUs h3, .AboutUs p{
         width: 290px !important;
         margin-top: 20px;
     }
@@ -218,7 +227,7 @@
         margin: 20px 0 0 0  !important;
     }
     .bgShadow{
-        height: 220% !important;
+        height: 190% !important;
     }
     .AboutUs h3{ 
         text-align: center;
@@ -244,7 +253,7 @@
         margin: 50px 0 50px 0;
     }
     .container{
-        width: 100% !important;
+        width: 90% !important;
     }
     .container .card .image{
         left: 0 !important;
@@ -299,7 +308,7 @@
     .footerContent div h1{
         color: #fff;
     }
-    .footerOne h1,p{
+    .footerOne h1,.footerOne p{
         margin-left: 50px !important;
     }
     .contact-list{
@@ -334,6 +343,31 @@
     .nav__link {
         font-size: 20px;
     }
+    .footerOne h1, .footerOne p{
+        margin-left: 0% !important;
+    }
+    .btn-primary{
+        margin-left: 0 !important;
+    }
+    #contack {
+        padding-top: 200px !important;
+        margin-bottom: 600px;
+    }
+    .nav__data p {
+        font-size: 15px !important;
+        width: 200px !important;
+        margin: 0 !important;
+    }
+    .bottomShadow{
+        margin-top: 10.9% !important;
+        z-index: 10;
+    }
+    .carousel-caption p {
+        margin-left: 0 !important;
+    }
+    .boxOne{
+        justify-content: center !important;
+    }
 }
 @media (min-width: 500px) and (max-width: 599px){
     .boxOne {
@@ -347,19 +381,21 @@
         width: 100% !important;
     }
     .boxOne ul li{
-        width: 35%;
+        width: 38%;
     }
     .boxOne li p{
-        width: 120px !important;
+        /* width: 120px !important; */
         font-size: 13px !important;
+        margin: 0 !important;
+        margin-left: 7px !important;
+        padding: 10px 10px 40px 10px !important;
     }
     .AboutUs{
-        width: 300px !important;
+        width: 400px !important;
         margin-top: 80px;
-        margin-left: 20px;
     }
-    .AboutUs h1, h3, p{
-        width: 290px !important;
+    .AboutUs h1, .AboutUs h3, .AboutUs p{
+        width: 400px !important;
         margin-top: 20px;
     }
     footer{
@@ -376,7 +412,7 @@
         margin: 20px 0 0 0  !important;
     }
     .bgShadow{
-        height: 220% !important;
+        height: 190% !important;
     }
     .AboutUs h3{ 
         text-align: center;
@@ -386,7 +422,7 @@
         padding: 20px;
     }
     .AboutUs button{
-        margin-left: 25%;
+        margin-left: 29%;
         margin-bottom: 50px;
     }
     .AboutUs h1{ 
@@ -402,7 +438,7 @@
         margin: 50px 0 50px 0;
     }
     .container{
-        width: 100% !important;
+        width: 85% !important;
     }
     .container .card .image{
         left: 0 !important;
@@ -457,6 +493,9 @@
     .footerContent div h1{
         color: #fff;
     }
+    .footerOne h1,.footerOne p{
+        margin-left: 50px !important;
+    }
     .contact-list{
         width: 100%;
         margin-left: 10px !important; 
@@ -488,6 +527,31 @@
     }
     .nav__link {
         font-size: 20px;
+    }
+    .footerOne h1, .footerOne p{
+        margin-left: 0% !important;
+    }
+    .btn-primary{
+        margin-left: 0 !important;
+    }
+    #contack {
+        padding-top: 200px !important;
+        margin-bottom: 600px;
+    }
+    .nav__data p {
+        font-size: 15px !important;
+        width: 200px !important;
+        margin: 0 !important;
+    }
+    .bottomShadow{
+        margin-top: 9.9% !important;
+        z-index: 10;
+    }
+    .carousel-caption p {
+        margin-left: 0 !important;
+    }
+    .boxOne{
+        justify-content: center !important;
     }
 }
 @media (min-width: 600px) and (max-width: 699px){
@@ -502,19 +566,21 @@
         width: 100% !important;
     }
     .boxOne ul li{
-        width: 35%;
+        width: 38%;
     }
     .boxOne li p{
-        width: 120px !important;
+        /* width: 120px !important; */
         font-size: 13px !important;
+        margin: 0 !important;
+        margin-left: 7px !important;
+        padding: 10px 10px 40px 10px !important;
     }
     .AboutUs{
-        width: 300px !important;
+        width: 500px !important;
         margin-top: 80px;
-        margin-left: 20px;
     }
-    .AboutUs h1, h3, p{
-        width: 290px !important;
+    .AboutUs h1, .AboutUs h3, .AboutUs p{
+        width: 500px !important;
         margin-top: 20px;
     }
     footer{
@@ -531,7 +597,7 @@
         margin: 20px 0 0 0  !important;
     }
     .bgShadow{
-        height: 220% !important;
+        height: 190% !important;
     }
     .AboutUs h3{ 
         text-align: center;
@@ -541,7 +607,7 @@
         padding: 20px;
     }
     .AboutUs button{
-        margin-left: 25%;
+        margin-left: 32%;
         margin-bottom: 50px;
     }
     .AboutUs h1{ 
@@ -557,7 +623,7 @@
         margin: 50px 0 50px 0;
     }
     .container{
-        width: 100% !important;
+        width: 85% !important;
     }
     .container .card .image{
         left: 0 !important;
@@ -612,6 +678,9 @@
     .footerContent div h1{
         color: #fff;
     }
+    .footerOne h1,.footerOne p{
+        margin-left: 50px !important;
+    }
     .contact-list{
         width: 100%;
         margin-left: 10px !important; 
@@ -643,6 +712,34 @@
     }
     .nav__link {
         font-size: 20px;
+    }
+    .footerOne h1, .footerOne p{
+        margin-left: 0% !important;
+    }
+    .btn-primary{
+        margin-left: 0 !important;
+    }
+    #contack {
+        padding-top: 200px !important;
+        margin-bottom: 600px;
+    }
+    .nav__data p {
+        font-size: 15px !important;
+        width: 200px !important;
+        margin: 0 !important;
+    }
+    .bottomShadow{
+        margin-top: 7.9% !important;
+        z-index: 10;
+    }
+    .carousel-caption p {
+        margin-left: 0 !important;
+    }
+    .boxOne{
+        justify-content: center !important;
+    }
+    .card {
+        max-width: 296px !important;
     }
 }
 @media (min-width: 700px) and (max-width: 799px){
@@ -657,19 +754,21 @@
         width: 100% !important;
     }
     .boxOne ul li{
-        width: 35%;
+        width: 38%;
     }
     .boxOne li p{
-        width: 120px !important;
+        /* width: 120px !important; */
         font-size: 13px !important;
+        margin: 0 !important;
+        margin-left: 7px !important;
+        padding: 10px 10px 40px 10px !important;
     }
     .AboutUs{
-        width: 300px !important;
+        width: 600px !important;
         margin-top: 80px;
-        margin-left: 20px;
     }
-    .AboutUs h1, h3, p{
-        width: 290px !important;
+    .AboutUs h1, .AboutUs h3, .AboutUs p{
+        width: 600px !important;
         margin-top: 20px;
     }
     footer{
@@ -686,7 +785,7 @@
         margin: 20px 0 0 0  !important;
     }
     .bgShadow{
-        height: 220% !important;
+        height: 190% !important;
     }
     .AboutUs h3{ 
         text-align: center;
@@ -696,7 +795,7 @@
         padding: 20px;
     }
     .AboutUs button{
-        margin-left: 25%;
+        margin-left: 35%;
         margin-bottom: 50px;
     }
     .AboutUs h1{ 
@@ -712,7 +811,7 @@
         margin: 50px 0 50px 0;
     }
     .container{
-        width: 100% !important;
+        width: 77% !important;
     }
     .container .card .image{
         left: 0 !important;
@@ -767,6 +866,9 @@
     .footerContent div h1{
         color: #fff;
     }
+    .footerOne h1,.footerOne p{
+        margin-left: 50px !important;
+    }
     .contact-list{
         width: 100%;
         margin-left: 10px !important; 
@@ -784,10 +886,10 @@
         width: 300px !important;
     }
     .nav__greeting{
-        font-size: 40px !important;
+        font-size: 30px !important;
     }
     .navNameSpan{
-        font-size: 30px !important;
+        font-size: 20px !important;
     }
     .nav__text{
         font-size: 20px !important;
@@ -798,6 +900,31 @@
     }
     .nav__link {
         font-size: 20px;
+    }
+    .footerOne h1, .footerOne p{
+        margin-left: 0% !important;
+    }
+    .btn-primary{
+        margin-left: 0 !important;
+    }
+    #contack {
+        padding-top: 200px !important;
+        margin-bottom: 600px;
+    }
+    .nav__data p {
+        font-size: 15px !important;
+        width: 200px !important;
+        margin: 0 !important;
+    }
+    .bottomShadow{
+        margin-top: 7.9% !important;
+        z-index: 10;
+    }
+    .carousel-caption p {
+        margin-left: 0 !important;
+    }
+    .card {
+        max-width: 296px !important;
     }
 }
 @media (min-width: 800px) and (max-width: 899px){
@@ -806,25 +933,27 @@
         top: 0 !important;
     }
     #contact{
-        margin-top: 160px;
+        margin-top: 300px;
     }
     .boxOne ul{
         width: 100% !important;
     }
     .boxOne ul li{
-        width: 35%;
+        width: 38%;
     }
     .boxOne li p{
-        width: 120px !important;
+        /* width: 120px !important; */
         font-size: 13px !important;
+        margin: 0 !important;
+        margin-left: 7px !important;
+        padding: 10px 10px 40px 10px !important;
     }
     .AboutUs{
-        width: 300px !important;
+        width: 600px !important;
         margin-top: 80px;
-        margin-left: 20px;
     }
-    .AboutUs h1, h3, p{
-        width: 290px !important;
+    .AboutUs h1, .AboutUs h3, .AboutUs p{
+        width: 600px !important;
         margin-top: 20px;
     }
     footer{
@@ -841,7 +970,7 @@
         margin: 20px 0 0 0  !important;
     }
     .bgShadow{
-        height: 220% !important;
+        height: 125% !important;
     }
     .AboutUs h3{ 
         text-align: center;
@@ -851,7 +980,7 @@
         padding: 20px;
     }
     .AboutUs button{
-        margin-left: 25%;
+        margin-left: 35%;
         margin-bottom: 50px;
     }
     .AboutUs h1{ 
@@ -867,7 +996,7 @@
         margin: 50px 0 50px 0;
     }
     .container{
-        width: 100% !important;
+        width: 75% !important;
     }
     .container .card .image{
         left: 0 !important;
@@ -922,6 +1051,9 @@
     .footerContent div h1{
         color: #fff;
     }
+    .footerOne h1,.footerOne p{
+        margin-left: 50px !important;
+    }
     .contact-list{
         width: 100%;
         margin-left: 10px !important; 
@@ -939,10 +1071,10 @@
         width: 300px !important;
     }
     .nav__greeting{
-        font-size: 40px !important;
+        font-size: 30px !important;
     }
     .navNameSpan{
-        font-size: 30px !important;
+        font-size: 20px !important;
     }
     .nav__text{
         font-size: 20px !important;
@@ -953,6 +1085,31 @@
     }
     .nav__link {
         font-size: 20px;
+    }
+    .footerOne h1, .footerOne p{
+        margin-left: 0% !important;
+    }
+    .btn-primary{
+        margin-left: 0 !important;
+    }
+    #contack {
+        padding-top: 200px !important;
+        margin-bottom: 600px;
+    }
+    .nav__data p {
+        font-size: 15px !important;
+        width: 200px !important;
+        margin: 0 !important;
+    }
+    .bottomShadow{
+        margin-top: 4.9% !important;
+        z-index: 10;
+    }
+    .carousel-caption p {
+        margin-left: 0 !important;
+    }
+    .card {
+        max-width: 296px !important;
     }
 }
 @media (min-width: 900px) and (max-width: 999px){
@@ -961,25 +1118,28 @@
         top: 0 !important;
     }
     #contact{
-        margin-top: 160px;
+        margin-top: 300px;
     }
     .boxOne ul{
         width: 100% !important;
     }
     .boxOne ul li{
-        width: 35%;
+        width: 38%;
+        height: 40%;
     }
     .boxOne li p{
-        width: 120px !important;
+        /* width: 120px !important; */
         font-size: 13px !important;
+        margin: 0 !important;
+        margin-left: 7px !important;
+        padding: 10px 10px 40px 10px !important;
     }
     .AboutUs{
-        width: 300px !important;
+        width: 600px !important;
         margin-top: 80px;
-        margin-left: 20px;
     }
-    .AboutUs h1, h3, p{
-        width: 290px !important;
+    .AboutUs h1, .AboutUs h3, .AboutUs p{
+        width: 600px !important;
         margin-top: 20px;
     }
     footer{
@@ -996,7 +1156,7 @@
         margin: 20px 0 0 0  !important;
     }
     .bgShadow{
-        height: 220% !important;
+        height: 125% !important;
     }
     .AboutUs h3{ 
         text-align: center;
@@ -1006,7 +1166,7 @@
         padding: 20px;
     }
     .AboutUs button{
-        margin-left: 25%;
+        margin-left: 35%;
         margin-bottom: 50px;
     }
     .AboutUs h1{ 
@@ -1022,7 +1182,7 @@
         margin: 50px 0 50px 0;
     }
     .container{
-        width: 100% !important;
+        width: 75% !important;
     }
     .container .card .image{
         left: 0 !important;
@@ -1077,6 +1237,9 @@
     .footerContent div h1{
         color: #fff;
     }
+    .footerOne h1,.footerOne p{
+        margin-left: 50px !important;
+    }
     .contact-list{
         width: 100%;
         margin-left: 10px !important; 
@@ -1094,10 +1257,10 @@
         width: 300px !important;
     }
     .nav__greeting{
-        font-size: 40px !important;
+        font-size: 30px !important;
     }
     .navNameSpan{
-        font-size: 30px !important;
+        font-size: 20px !important;
     }
     .nav__text{
         font-size: 20px !important;
@@ -1109,10 +1272,184 @@
     .nav__link {
         font-size: 20px;
     }
+    .footerOne h1, .footerOne p{
+        margin-left: 0% !important;
+    }
+    .btn-primary{
+        margin-left: 0 !important;
+    }
+    #contack {
+        padding-top: 200px !important;
+        margin-bottom: 600px;
+    }
+    .nav__data p {
+        font-size: 15px !important;
+        width: 200px !important;
+        margin: 0 !important;
+    }
+    .bottomShadow{
+        margin-top: 4.9% !important;
+        z-index: 10;
+    }
+    .carousel-caption p {
+        margin-left: 0 !important;
+    }
+    .card {
+        max-width: 296px !important;
+    }
 }
 @media (min-width: 1000px) and (max-width: 1200px){
+    .boxOne {
+        top: 0 !important;
+    }
+    #contact{
+        margin-top: 300px;
+    }
+    .boxOne ul{
+        width: 100% !important;
+        margin-top: 140px;
+    }
     .AboutUs{
-        width: 500px !important;
-        margin-top: 80px;
+        margin-top: 180px !important;
+    }
+    .boxOne ul li{ 
+        height: 40%;
+    }
+    .boxOne li p{
+        /* width: 120px !important; */
+        font-size: 13px !important;
+        margin: 0 !important;
+        margin-left: 7px !important;
+        padding: 10px 10px 40px 10px !important;
+    }
+    footer{
+        margin-top: 400px !important;
+    }
+    .slide{
+        height: 94vh;
+    }
+    .d-none{
+        display: block !important;
+    }
+    .AboutIcon{
+        width: 40px !important;
+        margin: 20px 0 0 0  !important;
+    }
+    .bgShadow{
+        height: 125% !important;
+    }
+    .AboutUs h3{ 
+        width: 200px;
+        text-align: left;
+        width: 100px;
+    }
+    .AboutUs p{ 
+        text-align: left !important;
+        width: 300px !important;
+    }
+    .AboutUs button{ 
+        margin-bottom: 50px;
+    }
+    .AboutUs h1{ 
+        width: 300px !important;
+        font-size: 30px !important;
+        text-align: left;
+    }
+    .carousel-item img{
+        height: 94vh !important;
+        background-position: right;
+    }
+    .list li {
+        width: 100% !important;
+        margin: 50px 0 50px 0;
+    }
+    .container{
+        width: 75% !important;
+    }
+    .container .card .image{
+        left: 0 !important;
+    }
+    ol, ul{
+        padding-left: 0 !important;
+    }
+    .header__logo, .header__toggle{
+        font-size: 20px !important;
+    }
+    #About {
+        margin-top: 2000px !important;
+        margin-bottom: 500px;
+    }
+    #contack{
+        padding-top: 100px !important;
+    }
+    .footerContent{
+        flex-wrap: wrap !important;
+        text-align: center;
+    }
+    .footerContent div{
+        width: 100%;
+    }
+    .footerContent div h1{
+        color: #fff;
+    }
+    .footerOne h1,.footerOne p{
+        margin-left: 50px !important;
+    }
+    .contact-list{
+        width: 100%;
+        margin-left: 10px !important; 
+    }
+    .send-button{
+        width: 100% !important;
+    }
+    .alt-send-button{
+        width: 100% !important;
+    }
+    .form-control, textarea{
+        margin: 20px 0 20px 0 !important;
+    }
+    .form-control{
+        width: 300px !important;
+    }
+    .nav__greeting{
+        font-size: 30px !important;
+    }
+    .navNameSpan{
+        font-size: 20px !important;
+    }
+    .nav__text{
+        font-size: 20px !important;
+        width: 300px !important;
+    }
+    .nav__link i{
+        font-size: 2rem !important;
+    }
+    .nav__link {
+        font-size: 20px;
+    }
+    .footerOne h1, .footerOne p{
+        margin-left: 0% !important;
+    }
+    .btn-primary{
+        margin-left: 0 !important;
+    }
+    #contack {
+        padding-top: 200px !important;
+        margin-bottom: 600px;
+    }
+    .nav__data p {
+        font-size: 15px !important;
+        width: 200px !important;
+        margin: 0 !important;
+    }
+    .bottomShadow{
+        margin-top: 4.9% !important;
+        z-index: 10;
+    }
+    .carousel-caption p {
+        margin-left: 0 !important;
+    }
+    .card {
+        max-width: 296px !important;
     }
 }
